--- a/Code/tokenizer_prototype_v2.ipynb
+++ b/Code/tokenizer_prototype_v2.ipynb
@@ -1607,9 +1607,9 @@
           "height": 487
         },
         "id": "ClLJAkvtBGmY",
-        "outputId": "9e35c60c-ac69-41e5-a3f4-6cf681243a80"
+        "outputId": "ccd7aad3-2813-427e-a51d-d01bdb9d1938"
       },
-      "execution_count": 56,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1622,7 +1622,7 @@
               "    <div>\n",
               "      \n",
               "      <progress value='3' max='3' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [3/3 00:28, Epoch 3/3]\n",
+              "      [3/3 00:31, Epoch 3/3]\n",
               "    </div>\n",
               "    <table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
@@ -1640,7 +1640,7 @@
               "    <tr>\n",
               "      <td>1</td>\n",
               "      <td>No log</td>\n",
-              "      <td>0.266716</td>\n",
+              "      <td>0.067148</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.000000</td>\n",
@@ -1649,7 +1649,7 @@
               "    <tr>\n",
               "      <td>2</td>\n",
               "      <td>No log</td>\n",
-              "      <td>0.083416</td>\n",
+              "      <td>0.020878</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.000000</td>\n",
@@ -1658,7 +1658,7 @@
               "    <tr>\n",
               "      <td>3</td>\n",
               "      <td>No log</td>\n",
-              "      <td>0.052964</td>\n",
+              "      <td>0.010483</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.000000</td>\n",
@@ -1711,6 +1711,40 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Predict on New text\n",
+        "\n",
+        "predictTokenizer = AutoTokenizer.from_pretrained('./historical-event-ner.model/')\n",
+        "\n",
+        "paragraph = '''The Battle of Khirbet Al-Joz was fought between forces of the Syrian Army and the FSA for control of the town. On 6 October 2012, the FSA launched an attack on the government occupied village of Kherbet Eljoz, near the Turkish border. The FSA took control of the village after a 12-hour-long battle with government forces.'''\n",
+        "tokens = predictTokenizer(paragraph)\n",
+        "torch.tensor(tokens['input_ids']).unsqueeze(0).size()\n",
+        "\n",
+        "model = AutoModelForTokenClassification.from_pretrained('./historical-event-ner.model/', num_labels=len(label_list))\n",
+        "predictions = model.forward(input_ids=torch.tensor(tokens['input_ids']).unsqueeze(0), attention_mask=torch.tensor(tokens['attention_mask']).unsqueeze(0))\n",
+        "predictions = torch.argmax(predictions.logits.squeeze(), axis=1)\n",
+        "value_predictions = [label_list[i] for i in predictions]\n",
+        "\n",
+        "words = predictTokenizer.batch_decode(tokens['input_ids'])\n",
+        "pd.DataFrame({'ner': predictions, 'words': words}).to_csv('historical-event-ner.csv')"
+      ],
+      "metadata": {
+        "id": "4iXEtAh8JebP"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0VxtBe83Kc4N"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
