--- a/Code/tokenizer_and_train_prototype.ipynb
+++ b/Code/tokenizer_and_train_prototype.ipynb
@@ -1926,14 +1926,14 @@
     {
       "cell_type": "code",
       "source": [
-        "!zip -r /content/folder.zip /content/historical-event-ner.model"
+        "# !zip -r /content/folder.zip /content/historical-event-ner.model"
       ],
       "metadata": {
         "id": "0VxtBe83Kc4N",
-        "outputId": "1c0a1bf5-ba3e-4e35-a29b-90afba05c633",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1c0a1bf5-ba3e-4e35-a29b-90afba05c633"
       },
       "execution_count": 20,
       "outputs": [
@@ -1956,16 +1956,16 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import files\n",
-        "files.download('folder.zip')\n"
+        "# from google.colab import files\n",
+        "# files.download('folder.zip')"
       ],
       "metadata": {
-        "id": "f8k8cakYEpC7",
-        "outputId": "d416ec79-753c-4206-8b31-55407c66fcb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+          "height": 17
+        },
+        "id": "f8k8cakYEpC7",
+        "outputId": "d416ec79-753c-4206-8b31-55407c66fcb1"
       },
       "execution_count": 22,
       "outputs": [
